--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -6,7 +6,6 @@ body {
   font-size: 1.8rem;
 }
 .opening {
-  /* height: 80vh; */
   width: 100%;
   padding: 0px;
   margin: 0px;
@@ -55,8 +54,10 @@ h3 {
     background-color: #5f9c97;
     margin-bottom: 5px;
 }
+.docs {
+  font-size: 1.8rem;
+}
 .header {
-  /* height: 50vh; */
   clear: both;
 }
 .main-image {
@@ -90,12 +91,15 @@ h3 {
 }
 .article-preview {
   width: 100%;
-  height: 20vh;
+  height: 20vw;
   overflow: hidden;
 }
 .article-page {
   margin-left: auto;
   margin-right: auto;
+}
+.btn {
+  font-size: 1.8rem;s
 }
 .card {
   display: flex;
@@ -164,22 +168,11 @@ footer .logo {
  src: url("../fonts/EFN Malowany.ttf");
 }
 
-/* @media (max-width: 600px) {
-  h2 {
-    font-size: 3vw;
-  }
-  }
-@media (max-width: 900px) {
-  body {
-    font-size: 20px;
-  }
-  h2 {
-    font-size: 2.5vw;
-  } */
 @media (max-width: 1200px) {
   body {
     font-size: 170%;
   }
-  /* h2 {
-    font-size: 2vw;
-  } */
+  @media (orientation: portrait) {
+    body {
+      font-size: 350%;
+    }
