--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -172,7 +172,17 @@ footer .logo {
   body {
     font-size: 170%;
   }
-  @media (orientation: portrait) {
-    body {
-      font-size: 350%;
-    }
+}
+@media (orientation: portrait) {
+  body {
+    font-size: 350%;
+  }
+  footer {
+    height: 25vh;
+  }
+  h1 {
+    font-size: 2.5vh;
+  }
+  .article-preview {
+    height: 20vh;
+}
