--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -178,7 +178,7 @@ footer .logo {
     font-size: 350%;
   }
   footer {
-    height: 25vh;
+    font-size: 2rem;
   }
   h1 {
     font-size: 2.5vh;
