--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -33,6 +33,9 @@ h3 {
   font-weight: 600;
   text-align: center;
 }
+h5 {
+  font-size: 2.5rem;
+}
 .navbar {
   background-color: #5f9c97;
 }
@@ -42,17 +45,17 @@ h3 {
   color: #dfd563;
 }
 .navbar-toggler{
-    width: 47px;
-    height: 34px;
+    width: 6rem;
+    height: 5.3rem;
     background-color: #dfd563;
     border:none;
 }
 .navbar-toggler .line{
     width: 100%;
     float: left;
-    height: 2px;
+    height: 0.3rem;
     background-color: #5f9c97;
-    margin-bottom: 5px;
+    margin-bottom: 0.7rem;
 }
 .docs {
   font-size: 1.8rem;
@@ -99,7 +102,7 @@ h3 {
   margin-right: auto;
 }
 .btn {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 .card {
   display: flex;
@@ -186,5 +189,8 @@ footer .logo {
   }
   .article-preview {
     height: 20vh;
+  }
+  .btn {
+    font-size: 3rem;
   }
 }
