--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -187,6 +187,15 @@ footer .logo {
   h1 {
     font-size: 2.5vh;
   }
+  h2 {
+    font-size: 3.5rem;
+  }
+  h3 {
+    font-size: 3.5rem;
+  }
+  h5 {
+    font-size: 3.5rem;
+  }
   .article-preview {
     height: 20vh;
   }
