--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -203,3 +203,30 @@ footer .logo {
     font-size: 3rem;
   }
 }
+@media (max-width: 1080px) {
+  body {
+    font-size: 350%;
+  }
+  footer {
+    font-size: 2rem;
+    height: 100%;
+  }
+  h1 {
+    font-size: 2.5vh;
+  }
+  h2 {
+    font-size: 3.5rem;
+  }
+  h3 {
+    font-size: 3.5rem;
+  }
+  h5 {
+    font-size: 3.5rem;
+  }
+  .article-preview {
+    height: 20vh;
+  }
+  .btn {
+    font-size: 3rem;
+  }
+}
