--- a/styles/soyuz-hoomey.css
+++ b/styles/soyuz-hoomey.css
@@ -77,7 +77,7 @@ h5 {
 }
 .nav-item {
   border: 1px solid rgb(223, 213, 99, .3);
-  border-radius: 10%;
+  border-radius: 10px;
 }
 .nav-link {
   color: #dfd563;
@@ -92,13 +92,14 @@ h5 {
 #saradak {
   background-color: #d25435;
   border: 1px solid rgb(223, 213, 99, .3);
-  border-radius: 10%;
+  border-radius: 10px;
 }
 #saradak a {
   color: #ffffff;
 }
-#saradak active {
-  border: 1px solid #ffffff;
+.nav-item #saradak {
+  border: none;
+  color: #ffffff;
 }
 .page-header {
   width: 100%;
@@ -122,7 +123,7 @@ h5 {
 }
 .article-preview {
   width: 100%;
-  height: 20vw;
+  height: 7vw;
   overflow: hidden;
 }
 .article-page {
