--- a/styles/saradak.css
+++ b/styles/saradak.css
@@ -93,6 +93,10 @@ ol {
   .participant-list {
     max-height: 30vh;
   }
+  .participant {
+    margin-bottom: 2rem;
+    line-height: 8rem;
+  }
 }
 @media (orientation: portrait) {
   .saradak-header {
@@ -108,5 +112,9 @@ ol {
   }
   .participant-list {
     max-height: 30vh;
+  }
+  .participant {
+    margin-bottom: 2rem;
+    line-height: 8rem;
   }
 }
