--- a/styles/saradak.css
+++ b/styles/saradak.css
@@ -28,7 +28,7 @@ h5 {
   padding: 10px;
   height: auto;
   color: #dfd563;
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: 600;
   text-align: center;
 }
@@ -67,6 +67,12 @@ h5 {
 ol {
   padding-left: 0px;
   list-style-position: inside;
+}
+.age-origin-hide {
+  display: none;
+}
+.age-origin-show {
+  display: block;
 }
 .video-box {
   height: 60vh;
