--- a/styles/saradak.css
+++ b/styles/saradak.css
@@ -67,12 +67,14 @@ h5 {
 ol {
   padding-left: 0px;
   list-style-position: inside;
+  list-style-type: decimal-leading-zero;
 }
 .age-origin-hide {
   display: none;
 }
 .age-origin-show {
   display: block;
+  padding-left: 1.5em;
 }
 .video-box {
   height: 60vh;
