--- a/styles/saradak.css
+++ b/styles/saradak.css
@@ -25,7 +25,7 @@ h2 {
   font-weight: 600 !important;
 }
 h5 {
-  padding: 10px;
+  padding: 5px;
   height: auto;
   color: #dfd563;
   font-size: 3rem;
@@ -36,12 +36,29 @@ h5 {
   display: flex;
   justify-content: center;
   clear: both;
-  max-height: 60vh;
-  padding-top: 6vh;
+  max-height: 65vh;
+  padding-top: 2vh;
 }
 .participant-list {
-  max-height: 60vh;
+  max-height: 50vh;
+  margin-bottom: 2vh;
+  padding:  10px;
+  background-color: rgb(0, 0, 0, .5);
+  backdrop-filter: blur(10px);
+  color: #dfd563;
+  border-radius: 10px;
+  font-weight: 600;
+}
+.p-list {
+  max-height: 35vh;
   overflow-y: scroll;
+}
+.add-list {
+  max-height: 14vh;
+  overflow-y: scroll;
+}
+.additional-material {
+  max-height: 20vh;
   padding: 10px;
   background-color: rgb(0, 0, 0, .5);
   backdrop-filter: blur(10px);
@@ -69,6 +86,10 @@ ol {
   list-style-position: inside;
   list-style-type: decimal-leading-zero;
 }
+ul {
+  padding-left: 0px;
+  list-style-position: inside;
+}
 .age-origin-hide {
   display: none;
 }
@@ -77,7 +98,7 @@ ol {
   padding-left: 1.5em;
 }
 .video-box {
-  height: 60vh;
+  height: 65vh;
   padding: 30px;
   background-color: rgb(0, 0, 0, .5);
   backdrop-filter: blur(10px);
